Fix spacing under project list header

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ picture img {
   display: grid;
   grid-template-columns: repeat(auto-fit, var(--proj-img-width));
   place-content: center;
-  gap: 2rem;
+  gap: var(--project-header-font-size);
 }
 
 .project-list-header {
